<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 
     <include
        android:id="@+id/title_layout"
        layout="@layout/title" />
    
     <!-- 测试次数 -->
      <RelativeLayout
        android:id="@+id/monekyLayout"
        style="@style/addMarginMenuLayout"
        android:background="@drawable/newlist_item_corner_bg_xml" >
        <TextView
            android:id="@+id/testBoutsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:paddingLeft="10dip"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="3"
            android:singleLine="true"
            android:textSize="18dip"
            android:text="@string/test_bouts" />
        <EditText 
            android:id="@+id/settingTestBoutsEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/testBoutsTextView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:inputType="phone"
            android:background="@null"
            android:singleLine="true" />
    </RelativeLayout>
  	<!-- 测试间隔 -->
      <RelativeLayout
        android:id="@+id/throttleLayout"
        style="@style/addMarginMenuLayout"
        android:background="@drawable/newlist_item_corner_bg_xml" >
        <TextView
            android:id="@+id/throttleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:paddingLeft="10dip"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="3"
            android:singleLine="true"
            android:textSize="18dip"
            android:text="@string/throttle" />
        <EditText 
            android:id="@+id/settingThrottleEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/throttleTextView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:inputType="phone"
            android:background="@null"
            android:singleLine="true" />
    </RelativeLayout>
      
      
   	<!-- 忽略延迟 -->
      <RelativeLayout
        android:id="@+id/ignoreTimeOutLayout"
        style="@style/addMarginMenuLayout"
        android:background="@drawable/newlist_item_corner_bg_xml" >
       <TextView
            android:id="@+id/ignoreTimeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:paddingLeft="10dip"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="3"
            android:singleLine="true"
            android:textSize="18dip"
            android:text="@string/ignore_timeout" />
                <CheckBox
                android:id="@+id/ignore_timeout_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="-5dip"
                android:button="@drawable/checkbox_bg_xml" />
    </RelativeLayout>
    
      <!-- 忽略奔溃 -->
       <RelativeLayout
        android:id="@+id/ignoreCrashesLayout"
        style="@style/addMarginMenuLayout"
        android:background="@drawable/newlist_item_corner_bg_xml" >
       <TextView
            android:id="@+id/ignoreCrashes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:paddingLeft="10dip"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="3"
            android:singleLine="true"
            android:textSize="18dip"
            android:text="@string/ignore_crashes" />
            <CheckBox
                android:id="@+id/ignore_crashes_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="-5dip"
                android:button="@drawable/checkbox_bg_xml" />
    </RelativeLayout>
    
</LinearLayout>
